@@ -159,7 +159,12 @@ class Filter(repops.MultiOpRep):
     def __init__(self,source,constraint,dim=LASTCOMMONDIM,mode=None):
         if(not isinstance(constraint,representor.Representor)):
             data = python.Rep(constraint, name='filter')
+            dims = data.DimsUnique
+            if dims:
+                dimnames = util.uniqify_names([d.name for d in dims],exclude=set([d.name for d in source.DimsUnique]))
+                data = data%tuple(dimnames)
             constraint = repops.PlusPrefix(data)
+
         repops.MultiOpRep.__init__(self,(source,constraint),dim=dim,mode=mode)
 
     def _process(self,sources,dim,mode):
