@@ -138,5 +138,7 @@
 0.1.23
 - Work around numpy 1.7 issue.
 - Fix check for old python version
-
+- AddSlice accepts ibidas objects
+- SplitDim, HArray autogenerated dimension names now consistent across runs
+- getShape renamed to Shape. Shape types know not unknown
 
